# flux_theme

./: .gitignore  .pre-commit-config.yaml  AI_SUMMARY.md  ARCHITECTURE.md  BRAND.md  CHANGELOG.md  CONTEXT.md  DEVELOPMENT.md  DEVELOPMENT_LOG.md  FEATURES_AR.md  FEATURES_EN.md  INTEGRATIONS.md  README.md  ROADMAP.md  SCENARIOS.md  conftest.py  license.txt  pyproject.toml  setup.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml  linters.yml
docs/: ARCHITECTURE.md  COMPETITIVE_ANALYSIS.md  FAQ.md  PERSONAS.md  SALES_PLAYBOOK.md  TRAINING.md
docs/posts/: README.md
docs/posts/ar/: 01-overview.md  02-problem-solving.md  03-multi-app-integration.md  05-social-short.md
docs/posts/en/: 01-overview.md  (+4 more)
flux_theme/: __init__.py  boot.py  demo.py  exceptions.py  gate.py  hooks.py  install.py  modules.txt  seed.py
flux_theme/api/: __init__.py  response.py
flux_theme/caps/: capability.json  capability_bundle.json  role_capability_map.json
flux_theme/caps_integration/: __init__.py  gate.py
flux_theme/config/: __init__.py  desktop.py
flux_theme/desktop_icon/: flux_theme.json
flux_theme/help/: _meta.json
flux_theme/public/: manifest.json  sw.js
flux_theme/services/: __init__.py  asset_service.py  theme_service.py
flux_theme/tests/: conftest.py  test_api.py  test_permissions.py
flux_theme/translations/: ar.csv  es.csv
flux_theme/utils/: __init__.py  constants.py  formatters.py  validators.py
flux_theme/www/: 403.html  404.html  error.html  flux_theme_about.html  flux_theme_about.py  flux_theme_onboarding.html  flux_theme_onboarding.py
(+86 files in other folders)
