[project]
name = "flux_theme"
version = "1.0.0"
description = "Modern co-working space theme for FLUX — Frappe 15"
authors = [
    {name = "Arkan Labs", email = "info@arkanlabs.com"}
]
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = ["frappe"]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "flux_theme"
