[project]
name = "flux_theme"
authors = [
    { name = "Arkan Labs", email = "info@arkanlabs.com" }
]
description = "Modern co-working space theme for FLUX Co-Working Space — Frappe 16"
requires-python = ">=3.14"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=16.0.0" # Installed and managed by bench.
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.dev-dependencies]
# package_name = "~=1.0.0"

[tool.bench.frappe-dependencies]
frappe = ">=16.0.0,<17.0.0"

[tool.ruff]
line-length = 110
target-version = "py314"

[tool.ruff.lint]
select = ["F", "E", "W", "I", "UP", "B"]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
docstring-code-format = true
